# cdm-jupyterhub

./: .gitignore  Dockerfile  Dockerfile_Livy  Pipfile  README.md  build.gradle  coverage.xml  docker-compose.yaml  pyproject.toml  settings.gradle
.github/: dependabot.yml
.github/workflows/: manual-build.yml  pr_build.yml  test.yml  trivy.yml
config/: .bashrc.tmpl  cdm-lake-read-only-policy.json  cdm-read-only-policy.json  cdm-read-write-policy.json  cdm-spark-job-logs-policy.json  hive-site-template.xml  jupyter_jupyter_ai_config.json  jupyterhub_config.py  spark-fairscheduler.xml  yarn-write-policy.json
docs/: data_sharing_guide.md  dev_guide.md  minio_guide.md  tenant_sql_warehouse_guide.md  user_guide.md
scripts/: entrypoint.sh  init-postgres-readonly.sh  livy_entrypoint.sh  minio_create_bucket_entrypoint.sh  notebook_entrypoint.sh  setup.sh  spawn_notebook.sh
src/db_ops/: spark_db_utils.py
src/jupyterhub_config/: custom_docker_spawner.py  custom_kube_spawner.py  custom_spawner.py  hub_singleuser.py  kb_jupyterhub_auth.py
src/minio_governance/: client.py  exceptions.py  models.py  utils.py
src/minio_utils/: minio_utils.py
src/notebook/: startup.py
src/notebook_utils/: cts_client.py  notebook_utils.py  startup.py
src/postgres/: connection.py  hive_metastore.py
src/service/: arg_checkers.py  errors.py  kb_auth.py  kb_user.py
src/spark/: cluster.py  cluster_manager.py  cluster_manager_models.py  data_store.py  kube_spark_manager.py  utils.py
src/spark/cdm_spark_cluster_manager_api_client/: README.md  __init__.py
src/spark/cdm_spark_cluster_manager_api_client/api/clusters/: create_cluster_clusters_post.py  delete_cluster_clusters_delete.py  get_cluster_status_clusters_get.py
src/spark/cdm_spark_cluster_manager_api_client/api/health/: health_check_health_get.py
src/spark/cdm_spark_cluster_manager_api_client/models/: __init__.py  cluster_delete_response.py  deployment_status.py  error_response.py  health_response.py  spark_cluster_config.py  spark_cluster_create_response.py  spark_cluster_status.py
templates/: login.html  mfa-required.html  native-login.html
test/src/db_ops/: spark_db_utils_test.py
test/src/jupyterhub_config/: custom_docker_spawner_test.py  custom_kube_spawner_test.py  custom_spawner_test.py  hub_singleuser_test.py  kb_jupyterhub_auth_test.py
test/src/minio_governance/: minio_client_test.py  minio_exceptions_test.py  minio_models_test.py
test/src/minio_utils/: minio_utils_test.py
test/src/notebook_utils/: cts_client_test.py  notebook_utils_test.py
test/src/postgres/: connection_test.py  hive_metastore_test.py
test/src/service/: arg_checkers_test.py  errors_test.py  kb_auth_test.py  kb_user_test.py
test/src/spark/: cluster_manager_models_test.py  cluster_manager_test.py  cluster_test.py  data_store_test.py  kube_spark_manager_test.py  utils_test.py
test/src/spark/cdm_spark_cluster_manager_api_client/: client_test.py
ts/: README.md  globals.d.ts  package-lock.json  package.json  rollup.config.mjs
ts/src/templates/: login.ts
