[project]
name = "cdm-jupyterhub"
version = "0.1.0"
description = "CDM Jupyterhub"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    # JupyterHub and system libraries (e.g., Spark, MinIO, etc.)
    "jupyterlab==4.4.3",
    "jupyterhub==5.3.0",
    "jupyterhub-nativeauthenticator==1.3.0",
    "dockerspawner==14.0.0",
    "jupyterhub-kubespawner==7.0.0",
    "jupyterlab_favorites==3.2.2",
    "sidecar==0.7.0",
    "json5==0.12.0",
    "pycurl==7.45.6",
    "pyspark==3.5.5",
    "boto3==1.38.8",
    "minio==7.2.15",
    "delta-spark==3.2.0",  # should match JAR version (DELTA_SPARK_VER) specified in the Dockerfile
    "PyMySQL==1.1.1",
    "urllib3==2.4.0",
    "jupyterlab-git==0.51.1",
    "cdm-jupyterlab-brand-extension @ https://github.com/kbaseincubator/cdm_jupyterlab_brand_extension/raw/main/dist/cdm_jupyterlab_brand_extension-0.1.0-py3-none-any.whl",
    "cacheout==0.16.0",
    "psycopg==3.2.7",
    # Jupyter AI libraries
    "jupyter-ai==2.31.4",
    "langchain-openai==0.3.16",
    "langchain-anthropic==0.3.12",
    "langchain-ollama==0.3.2",
    "huggingface_hub==0.30.2",
    "jupyter-ai-cborg @ git+https://github.com/kbaseincubator/cdm-jupyter-ai-cborg.git@v0.1.0",
    # Frequently utilized data visualization libraries by the science team
    "plotly==6.0.1",
    "tqdm==4.67.1",
    "ipywidgets==8.1.6",
    "pygraphviz==1.14",
    "scipy==1.15.2",
    "scikit-learn==1.6.1",
    "biopython==1.85",
    "seaborn==0.13.2",
    "pandas==2.2.3",
    "pyarrow==20.0.0",
    "itables==2.3.0",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
]