[project]
name = "cdm-jupyterhub"
version = "0.1.0"
description = "CDM Jupyterhub"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    # JupyterHub and system libraries (e.g., Spark, MinIO, etc.)
    "jupyterlab==4.4.5",
    "jupyterhub==5.3.0",
    "jupyterhub-nativeauthenticator==1.3.0",
    "dockerspawner==14.0.0",
    "jupyterhub-kubespawner==7.0.0",
    "jupyterlab_favorites==3.2.2",
    "sidecar==0.7.0",
    "json5==0.12.0",
    "pycurl==7.45.6",
    "pyspark==3.5.6",
    "boto3==1.40.43",
    "minio==7.2.16",
    "delta-spark==3.3.2", # should match JAR version (DELTA_SPARK_VER) specified in the Dockerfile
    "PyMySQL==1.1.1",
    "urllib3==2.5.0",
    "jupyterlab-git==0.51.2",
    "cdm-jupyterlab-brand-extension @ https://github.com/kbaseincubator/cdm_jupyterlab_brand_extension/raw/main/dist/cdm_jupyterlab_brand_extension-0.1.0-py3-none-any.whl",
    "cacheout==0.16.0",
    "psycopg==3.2.9",
    # Jupyter AI libraries
    "jupyter-ai==2.31.6",
    "langchain-openai==0.3.28",
    "langchain-anthropic==0.3.18",
    "langchain-ollama==0.3.6",
    "huggingface_hub==0.34.3",
    "jupyter-ai-cborg @ git+https://github.com/kbaseincubator/cdm-jupyter-ai-cborg.git@v0.1.0",
    # Frequently utilized data visualization libraries by the science team
    "plotly==6.2.0",
    "tqdm==4.67.1",
    "ipywidgets==8.1.7",
    "pygraphviz==1.14",
    "scipy==1.16.1",
    "scikit-learn==1.7.1",
    "biopython==1.85",
    "seaborn==0.13.2",
    "pandas==2.3.1",
    "pyarrow==21.0.0",
    "itables==2.4.4",
    "cdm-task-service-client",
    "cdm-tree-browser",
]

[dependency-groups]
dev = [
    "ipython==9.4.0",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
]

[tool.uv.sources]
cdm-task-service-client = { git = "https://github.com/kbase/cdm-task-service-client.git", rev = "0.2.0" }
cdm-tree-browser = { url = "https://github.com/kbaseincubator/cdm-tree-browser/releases/download/0.0.2/cdm_tree_browser-0.1.0-py3-none-any.whl" }
